deployment/scripts/deployment/web-api/base/service.webapi.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: nagp-ecom-api
  labels:
    app: nagp-ecom-api
    type: api
    stack: nagp-ecom-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: svc-port-http
  selector:
    app: nagp-ecom-api
    stack: nagp-ecom-api
