deployment/scripts/deployment/web-api/base/httproute.api.k8s.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ingress-nagp-ecom-api
  labels:
    app: nagp-ecom-api
    type: gateway-ingress
    stack: nagp-ecom-api
  namespace: nagp-ecom
spec:
  parentRefs:
    - name: nagp-ecom-gateway
      namespace: nagp-ecom
  rules:
  - name: all-routes
    matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nagp-ecom-api
      namespace: nagp-ecom
      port: 80
